@@ -14,8 +14,7 @@
 SKIP_STATS=0
 
 //// Quality score from which to start truncating the 3' end of a read
-//TRIM_QUAL=13
-TRIM_QUAL=14
+TRIM_QUAL=13
 // e.g. if you pick 16, all quality scores will be >=17 after truncation
 // Q20: 1% , Q19: 1.3%, Q18: 1.6%, Q17: 2%, Q16: 2.5%, Q15: 3.2%, Q14: 4%, Q13: 5%
 // Ambiguities such as N typically have Q0. A Q13 threshold will essentially
@@ -50,11 +49,15 @@ Bpipe.run {
    seq_stats.using(stage:'initial', skip:SKIP_STATS) +
    rm_small_seqs.using(length:TRIM_LEN-10) +
    seq_stats.using(stage:'discard', skip:SKIP_STATS) +
+   //trim_N +
+   //seq_stats.using(stage:'ntrim', skip:SKIP_STATS) +
+   //rm_small_seqs.using(length:TRIM_LEN-10) +
+   //seq_stats.using(stage:'ndiscard', skip:SKIP_STATS) +
    qual_trim_seqs.using(qual:TRIM_QUAL) +
    seq_stats.using(stage:'qtrim', skip:SKIP_STATS) +
    rm_small_seqs.using(length:TRIM_LEN-10) +
    seq_stats.using(stage:'qdiscrd', skip:SKIP_STATS) +
-   trim_seqs.using(length:TRIM_LEN+10) +
+   crop_seqs.using(length:TRIM_LEN+10) +
    seq_stats.using(stage:'trim', skip:SKIP_STATS) +
    ee_filter.using(ee:TRIM_LEN*EE_PERC/100) +
    seq_stats.using(stage:'eefilt', skip:SKIP_STATS) +
@@ -63,7 +66,7 @@ Bpipe.run {
    seq_stats.using(stage:'acacia', skip:SKIP_STATS) +
    rm_small_seqs.using(length:TRIM_LEN) +
    seq_stats.using(stage:'fdiscrd', skip:SKIP_STATS) +
-   trim_seqs.using(length:TRIM_LEN) +
+   crop_seqs.using(length:TRIM_LEN) +
    seq_stats.using(stage:'ftrim', skip:SKIP_STATS) +
    fastq2fasta +
    final_report
