@@ -2,7 +2,8 @@ Changelog for Hitman
 
 x.x xxxx-xx-xx
  - Using Trimmomatic instead of FASTX Toolkit when possible to use multithreading
- - Replaced USEARCH FASTQ statistics by that provided by ea-utils
+ - Replaced USEARCH FASTQ statistics by that provided by ea-utils for ease-of-use
+ - Used GNU parallel to parallelize some trimming steps
 
 0.2 2014-03-18
  - Support for paired-end amplicon reads
